# auth-sa6bju

./: .env.example  .gitignore  DEPLOY.md  README.md  allowed_emails.txt.example  pyproject.toml  verify_example.py
app/: config.py  google_oauth.py  main.py  security.py  tokens.py
deploy/: auth.conf  gen_keys.py  googleauth.service  push.sh
docs/superpowers/plans/: 2026-05-31-google-auth-sso.md
docs/superpowers/specs/: 2026-05-31-google-auth-sso-design.md
tests/: test_callback.py  test_config.py  test_health.py  test_jwks_endpoint.py  test_keys.py  test_login.py  test_logout_me.py  test_security_allowlist.py  test_security_next.py  test_tokens.py  test_verify_example.py
