[project]
name = "googleauth"
version = "0.1.0"
description = "Google login + JWT cookie for *.sa6bju.se"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "authlib>=1.3",
    "pyjwt[crypto]>=2.8",
    "cryptography>=43",
    "pydantic-settings>=2.4",
    "itsdangerous>=2.2",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
